modules/border.css
/* ... */
/* remove content window border on split tabs*/
/* :root:has(#tabbrowser-tabpanels [zen-split]) #zen-tabbox-wrapper {
    border: none !important;
} */

/* content window bottom margin on SINGLE-TOOLBAR mode */
/* @media (-moz-bool-pref: "zen.view.use-single-toolbar") {
  :root[zen-sidebar-expanded="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
    margin-bottom: var(--na-window-margin) !important;
  }
} */

/* @media (-moz-pref("zen.view.use-single-toolbar")) {
  @media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
    :root[zen-sidebar-expanded="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
      margin-bottom: calc( var(--na-window-margin) - 10px ) !important;
    }
  }
} */

/* content window + address bar */
#zen-appcontent-wrapper {
    /* background-color: var(--na-color-bg) !important; */
    border-radius: 0px !important;
    /*! margin: 0px !important; */
    padding: 0px !important;
    overflow: hidden !important;
}

/* window */
#zen-tabbox-wrapper {
    box-shadow: none !important;
    overflow: clip !important;
    padding: 0px !important;
    /*! background-color: var(--na-color-bg) !important; */
    overflow: hidden !important;
    padding: 0px !important;
    background-clip: padding-box !important;
}

/* WEBVIEW BORDER RADIUS */

#tabbrowser-tabbox,
#tabbrowser-tabbox > * {
    margin: 0 !important;
    padding: 0 !important;
    box-sizing: border-box !important;
}

:root[zen-right-side="true"]:not([zen-compact-mode="true"]):not(
        [inDOMFullscreen="true"]
    )
    #zen-tabbox-wrapper {
    border-radius: var(--na-user-border-radius) !important;
}

:root:not([zen-right-side="true"]):not([zen-compact-mode="true"]):not(
        [inDOMFullscreen="true"]
    )
    #zen-tabbox-wrapper {
    border-radius: var(--na-user-border-radius) !important;
}

/* ADD WEBVIEW BORDER RADIUS TO CHILDREN ELEMENTS OF TABBOX */
:root:not([zen-compact-mode="true"]) {
/*     @media not (-moz-pref("wireframe.nogaps.enabled")) { */
        #tabbrowser-tabpanels {
            border-radius: var(--na-user-border-radius) !important;
        }

        #tabbrowser-tabpanels > * {
            border-radius: inherit !important;
            transition: border-radius 0.18s linear !important;
        }
/*     } */
}

:root:has([zen-compact-mode="true"]):has([sizemode="normal"])
    ):has(#zen-appcontent-navbar-wrapper[zen-has-hover="false"]) {
    #zen-tabbox-wrapper {
        border-radius: var(--na-window-border-radius) !important;
    }

    #tabbrowser-tabbox,
    #tabbrowser-tabbox > * {
        border-radius: var(--na-window-border-radius) !important;
    }
}

:root[inDOMFullscreen="true"] {
    #tabbrowser-tabpanels {
        border-radius: 0 !important;
    }
}


/* NO GAPS COMPACT MODE (DEFAULT) */

:root[zen-single-toolbar="true"][zen-compact-mode="true"]:not([customizing]) {
    /* Credits to CompTechGuy */
    #zen-appcontent-navbar-wrapper {
        min-height: 0.1px !important;
        height: 0.1px !important;
    }

    #zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
        height: 34px !important;
    }

    --zen-element-separation: 0px !important;

    #zen-tabbox-wrapper,
    #tabbrowser-tabbox,
    #tabbrowser-tabbox > * {
        border-radius: var(--na-window-border-radius) !important;
    }
}

/* FIX : REMOVE NAVBAR CONTAINER WHEN EMPTY */
:root[zen-single-toolbar="true"][zen-compact-mode="true"]:not(
        [customizing]
    ):has(#PersonalToolbar[collapsed]) {
    @media (-moz-pref("zen.view.experimental-force-window-controls-left")) {
        #zen-appcontent-navbar-wrapper {
            height: 0.1px !important;
        }
    }
}

:root:not([zen-single-toolbar="true"])[zen-compact-mode="true"]:not(
        [customizing]
    ) {
    /* Credits to CompTechGuy */

    /* TODO: ADD HIDE PREF FOR MULTI TOOLBAR TOPBAR !!! */

    /*   #zen-appcontent-navbar-wrapper {
	  min-height: 0.1px !important;
		height: 0.1px !important;
    transition: 0.18s ease !important;
	}

	#zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
	  height: 34px !important;
	} */

    --zen-element-separation: 0px !important;

    @media not (-moz-pref("wireframe.urlbar.position.top")) {
        #zen-tabbox-wrapper,
        #tabbrowser-tabbox,
        #tabbrowser-tabbox > *,
        .browserSidebarContainer,
        .browserSidebarContainer > * {
            border-bottom-left-radius: 0 !important;
            border-bottom-right-radius: 0 !important;
        }
    }

    @media (-moz-pref("wireframe.urlbar.position.top")) {
        #zen-tabbox-wrapper,
        #tabbrowser-tabbox,
        #tabbrowser-tabbox > *,
        .browserSidebarContainer,
        .browserSidebarContainer > * {
            border-top-left-radius: 0 !important;
            border-top-right-radius: 0 !important;
        }
    }
}

:root:not([zen-single-toolbar="true"])[zen-compact-mode="true"][sizemode="normal"] #browser,
:root:not([zen-single-toolbar="true"])[zen-compact-mode="true"][sizemode="normal"] #main-window{
  overflow: hidden !important;
  clip-path: inset(0 round var(--na-window-border-radius));
}

/* fix for corner bleeding in single toolbar compact mode */
:root[zen-single-toolbar="true"][zen-compact-mode="true"][sizemode="normal"] #browser,
:root[zen-single-toolbar="true"][zen-compact-mode="true"][sizemode="normal"] #main-window {
    overflow: hidden !important;
    clip-path: inset(0 round var(--na-window-border-radius));
}

/* fix for rounded corners in maximised compact mode */
:root:not([sizemode="normal"])[zen-compact-mode="true"]:not([customizing]){
    #zen-tabbox-wrapper,
    #tabbrowser-tabbox,
    #tabbrowser-tabbox > * {
        border-radius: 0 !important;
    }
}
/* ... */

